# elements

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeMain.txt  a.txt  main.cpp
examples/: CMakeLists.txt
examples/buttons/: main.cpp
examples/dynamic/: CMakeLists.txt  main.cpp
examples/dynamic/resources/: config.json
examples/layout/: main.cpp
examples/scale/: main.cpp
examples/sprite_sliders_and_knobs/: main.cpp
examples/text_and_icons/: main.cpp
lib/: CMakeLists.txt
lib/host/linux/: base_view.cpp  window.cpp
lib/host/macos/: base_view.mm
lib/host/windows/: base_view.cpp  window.cpp
lib/include/elements/: app.hpp  base_view.hpp  element.hpp  view.hpp  window.hpp
lib/include/elements/element/: align.hpp  button.hpp  composite.hpp  dial.hpp  dynamic.hpp  element.hpp  floating.hpp  flow.hpp  image.hpp  indirect.hpp  layer.hpp  margin.hpp  menu.hpp  misc.hpp  popup.hpp  port.hpp  proxy.hpp  size.hpp  slider.hpp  text.hpp  tile.hpp  tracker.hpp
lib/include/elements/support/: canvas.hpp  circle.hpp  draw_utils.hpp  glyphs.hpp  pixmap.hpp  point.hpp  rect.hpp  text_utils.hpp  theme.hpp
lib/src/: view.cpp
lib/src/element/: button.cpp  composite.cpp  dial.cpp  dynamic.cpp  element.cpp  floating.cpp  flow.cpp  image.cpp  layer.cpp  menu.cpp  misc.cpp  popup.cpp  port.cpp  progress_bar.cpp  proxy.cpp  slider.cpp  text.cpp  tile.cpp
lib/src/element/gallery/: button.cpp  (+4 more)
lib/src/support/: canvas.cpp  draw_utils.cpp  font.cpp  glyphs.cpp  pixmap.cpp  rect.cpp  text_utils.cpp
platform/osx/Photon.xcodeproj/: project.pbxproj
src/widget/: button.cpp
(+10 files in other folders)
